<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		android:title="@string/api_settings">

		<ListPreference
			android:key="provider_preset"
			android:title="@string/provider_preset_title"
			android:summary="@string/provider_preset_summary"
			android:entries="@array/provider_preset_entries"
			android:entryValues="@array/provider_preset_values"
			android:defaultValue="perplexity" />

		<EditTextPreference
			android:key="api_base_url"
			android:title="@string/api_base_url_title"
			android:summary="@string/api_base_url_summary"
			android:dialogTitle="@string/api_base_url_title"
			android:inputType="textUri" />

		<EditTextPreference
			android:key="api_model"
			android:title="@string/api_model_title"
			android:summary="@string/api_model_summary"
			android:dialogTitle="@string/api_model_title" />

		<EditTextPreference
			android:key="api_key"
			android:title="@string/api_key_title"
			android:summary="@string/api_key_summary" />

		<ListPreference
			android:key="language_preference"
			android:title="@string/language_title"
			android:summary="@string/language_summary"
			android:entries="@array/language_entries"
			android:entryValues="@array/language_values"
			android:defaultValue="en" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/notifications">

		<SwitchPreferenceCompat
			android:key="enable_notifications"
			android:title="@string/notification_title"
			android:summary="@string/notification_summary"
			android:defaultValue="true" />

		<Preference
			android:key="notification_time"
			android:title="@string/notification_time_title"
			android:summary="@string/notification_time_summary"
			android:dependency="enable_notifications" />
	</PreferenceCategory>
</PreferenceScreen>
